# synaesthesia

./: .gitignore  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  audacious.cc  config.h.in  configure  configure.ac  convert.pl  core.cc  emscripten.cc  font.h  icons.fig  icons.h  main.cc  pawrap.cc  polygon.h  sdlaudio.cc  sdlwrap.cc  sound.cc  soundbuf.cc  soundplayer.js  svgawrap.cc  symbol.h  syn-res.rc  syna.h  synaesthesia.desktop  ui.cc  winamp.cc  winsound.cc  xlib.c  xlib.h  xlibwrap.cc
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
viskodi/: Makefile  addon.cpp  addon.xml
